--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
-    "mongoose": "^7.2.2"
+    "mongoose": "^7.2.2",
+    "zod": "^3.21.4"
   }
 }
