--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "joi": "^17.9.2",
+    "lodash": "^4.17.21",
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
+    "multer": "^1.4.5-lts.1",
     "zod": "^3.21.4"
   }
 }
